parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-29.snap
---
source: src/lexer/lexer.rs
description: //=
---
[
    Token {
        kind: IntDivAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
