parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-37.snap
---
source: src/lexer/lexer.rs
description: +
---
[
    Token {
        kind: Plus,
        value: None,
        start: 0,
        end: 1,
    },
]
