parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-4.snap
---
source: src/lexer/lexer.rs
description: xX = 2
---
[
    Token {
        kind: Identifier,
        value: Str(
            "xX",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: Assign,
        value: None,
        start: 3,
        end: 4,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 5,
        end: 6,
    },
]
