parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-41.snap
---
source: src/lexer/lexer.rs
description: /
---
[
    Token {
        kind: Div,
        value: None,
        start: 0,
        end: 1,
    },
]
